--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.3.3",
+    "framer-motion": "^10.16.16",
+    "jspdf": "^2.5.1",
     "next": "^14.0.4",
+    "pica": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@imgly/background-removal": "^1.3.3",
-    "pica": "^9.0.1",
-    "jspdf": "^2.5.1",
-    "framer-motion": "^10.16.16",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pica": "^9.0.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   }
 }
